--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "rick-and-morty-react",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -15,7 +17,6 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    
     "start": "craco start",
     "build": "craco build",
     "test": "jest --runInBand",
