--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@babel/runtime": "^7.14.8",
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "autoprefixer": "^9.8.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
