--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
     ],
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "prettier/prettier": "error"
+      "prettier/prettier": "error",
+      "react/prop-types": "off"
     },
     "overrides": [
       {
