--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rick-and-morty-react",
   "version": "0.1.0",
+  "homepage": "http://baspinarenes.github.io/rick-and-morty",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -27,7 +28,9 @@
     "test": "jest --runInBand",
     "eject": "react-scripts eject",
     "lint": "eslint --fix src/index.js",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +68,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "postcss": "^7.0.36",
     "prettier": "^2.3.2",
