--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "history": "^4.10.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -26,6 +27,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "jest --runInBand",
+    "test:coverage": "jest --coverage --runInBand",
     "eject": "react-scripts eject",
     "lint": "eslint --fix src/index.js",
     "format": "prettier -w .",
