--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.12.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "autoprefixer": "^9.8.6",
+    "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
